# rechnung_ng

./: .gitignore  .tdd-guard.json  CLAUDE.md  README.md
backend/: Dockerfile  pyproject.toml  seed_data.py
backend/app/: config.py  main.py
backend/app/db/: yaml_store.py
backend/app/models/: camt.py  contract.py  customer.py  invoice.py  mail_template.py  plan.py
backend/app/routers/: contracts.py  customers.py  dashboard.py  invoices.py  mail_templates.py  plans.py  reconciliation.py  search.py  settings.py
backend/app/services/: camt_import.py  camt_parser.py  cancellation.py  invoice_generator.py  mail_service.py  reconciliation.py
backend/app/static/css/: style.css
backend/app/static/js/: app.js
backend/app/templates/: base.html.j2  cancellation.html.j2  invoice.html.j2
backend/app/templates/fragments/: contract_table.html.j2  customer_statement.html.j2  customer_table.html.j2  dashboard_stats.html.j2  invoice_detail.html.j2  (+13 more)
backend/data/: camt053_april2026_test.xml  config.yaml  invoices.yaml.bak  mail_templates.yaml
backend/rechnung_ng_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_build_info.py  test_camt_import.py  test_camt_models.py  test_camt_parser.py  test_contracts.py  test_customers.py  test_dashboard.py  test_dunning.py  test_effective_status.py  test_invoice_generator.py  test_invoices.py  test_mail_templates.py  test_matcher.py  test_pages.py  test_plans.py  test_reconciliation.py  test_search.py  test_settings.py
backend/tests/fixtures/: camt053_v8_sample.xml  camt053_wrong_namespace.xml
(+41 files in other folders)
